# AgriX

./: README.md  demo.py  dvc.yaml  logger_config.py  pyproject.toml  requirements.txt  test_exception.py  test_output.txt  train.py
.github/workflows/: ci.yaml
exception/: __init__.py
