[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agrix"
version = "0.1.0"
description = "AGRIX: DVC-driven machine learning pipeline with AWS S3 storage"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

authors = [
  { name = "Anushka Mali" }
]

dependencies = [
  "dvc[s3]",
  "awscli"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "flake8",
  "isort"
]

[tool.setuptools]
packages = ["agrix"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
